package com.ebobalo;

import java.io.Serializable;

public class MinMax implements IMinMax, Serializable {

    @Override
    public String Specification() {
        return "Minimum maximum fees was/will be applied.";
    }
}
